--- a/.gitignore
+++ b/.gitignore
@@ -2,11 +2,11 @@
 node_modules/
 
 # --- Environment Variables (Keep these secret!) ---
-.env
-.env.local
-.env.development.local
-.env.test.local
-.env.production.local
+# .env
+# .env.local
+# .env.development.local
+# .env.test.local
+# .env.production.local
 
 # --- Next.js (Frontend) Build ---
 .next/
