--- a/backend/.env
+++ b/backend/.env
@@ -1,2 +1,3 @@
 DATABASE_URL=postgres://qr_app_user:2b12mHEKivysTQo5U@localhost:5432/qr_generator?sslmode=disable
 PORT=8080
+JWT_SECRET=super_secure_jwt_secret_key_2025
