--- a/frontend/.env.local
+++ b/frontend/.env.local
@@ -1,1 +1,2 @@
 NEXT_PUBLIC_GOOGLE_CLIENT_ID=1084597369360-4vtb4td57m9b7u332s5q0ip6tl0q6ou7.apps.googleusercontent.com
+NEXT_PUBLIC_API_URL=http://localhost:8080
