--- a/backend/package.json
+++ b/backend/package.json
@@ -21,6 +21,7 @@
     "google-auth-library": "^10.5.0",
     "jsonwebtoken": "^9.0.3",
     "pg": "^8.16.3",
+    "stripe": "^20.0.0",
     "uuid": "^13.0.0"
   },
   "devDependencies": {
