--- a/.gitignore
+++ b/.gitignore
@@ -2,7 +2,7 @@
 node_modules/
 
 # --- Environment Variables (Keep these secret!) ---
-# .env
+.env
 # .env.local
 # .env.development.local
 # .env.test.local
